new: added invariant to TransmissionModel added and refactored tests, accordingly